# study_nanovg

./: README.md
StudyNanovgApp/: settings.gradle
StudyNanovgApp/app/: CMakeLists.txt  build.gradle
StudyNanovgApp/app/src/main/: AndroidManifest.xml
StudyNanovgApp/app/src/main/cpp/freetype/include/: example.c
StudyNanovgApp/app/src/main/cpp/sample/: native-fun.cpp  path-extractor.cpp  path-extractor.h  utfs.h
StudyNanovgApp/app/src/main/java/com/heaven7/android/nanovg/app/: EntryAc.java  MainActivity.java
StudyNanovgApp/app/src/main/java/com/iamjinge/freetype/: CustomView.java  PathExtractor.java
StudyNanovgApp/app/src/main/res/layout/: activity_test.xml
StudyNanovgApp/app/src/main/res/values/: strings.xml
StudyNanovgApp/gradle/wrapper/: gradle-wrapper.properties
study_freetype/: settings.gradle
study_freetype/app/: CMakeLists.txt  build.gradle
study_freetype/app/src/main/: AndroidManifest.xml
study_freetype/app/src/main/cpp/freetype2/freetype/config/: ftoption.h
study_freetype/app/src/main/cpp/sample/: JNI.cpp  TextureImage.cpp  TextureImage.h  com_heaven7_android_FreetypeTests.h  fthelper.cpp  fthelper.h  log.h  native-fun.cpp  path-extractor.cpp  path-extractor.h  platform.h  sample1.cpp  sample2.cpp  utfs.cpp
study_freetype/app/src/main/java/com/heaven7/android/: FreetypeRenderView.java  FreetypeTests.java  GLRenderer.java  TargaReader.java
study_freetype/app/src/main/java/com/heaven7/android/freetype/app/: MainActivity.java
study_freetype/app/src/main/java/com/heaven7/android/nanovg/app/: EntryAc.java
study_freetype/app/src/main/java/com/iamjinge/freetype/: CustomView.java  PathExtractor.java
study_freetype/app/src/main/res/layout/: activity_main.xml  activity_test.xml
study_freetype/app/src/main/res/values/: strings.xml
study_freetype/gradle/wrapper/: gradle-wrapper.properties
